--- a/dev/render.html
+++ b/dev/render.html
@@ -1,4 +1,14 @@
 
 <body>
-<img src="../build/outlines/preview.svg">
+
+    <h2>Preview</h2>
+    <img src="../build/outlines/preview.svg">
+
+    <h2>Top plate</h2>
+    <img src="../build/outlines/top_plate.svg">
+    <h2>PCB</h2>
+    <img src="../build/outlines/pcb.svg">
+    <h2>Bottom plate 1</h2>
+    <img src="../build/outlines/bottom_plate_1.svg">
+
 </body>
