small moves, and bottom plate wit outline

--- a/dev/render.html
+++ b/dev/render.html
@@ -10,5 +10,9 @@
     <img src="../build/outlines/pcb.svg">
     <h2>Bottom plate 1</h2>
     <img src="../build/outlines/bottom_plate_1.svg">
+    <h2>Floor plate</h2>
+    <img src="../build/outlines/floor_plate.svg">
+    <h2>Cover</h2>
+    <img src="../build/outlines/ic_cover.svg">
 
 </body>
