Update position and size of encoder and roller.

--- a/dev/render.html
+++ b/dev/render.html
@@ -4,15 +4,16 @@
     <h2>Preview</h2>
     <img src="../build/outlines/preview.svg">
 
-    <h2>Top plate</h2>
-    <img src="../build/outlines/top_plate.svg">
-    <h2>PCB</h2>
-    <img src="../build/outlines/pcb.svg">
-    <h2>Bottom plate 1</h2>
-    <img src="../build/outlines/bottom_plate_1.svg">
-    <h2>Floor plate</h2>
-    <img src="../build/outlines/floor_plate.svg">
-    <h2>Cover</h2>
+    <h2>Plates (top to bottom)</h2>
+    <h3>Cover</h3>
     <img src="../build/outlines/ic_cover.svg">
+    <h3>Top plate</h3>
+    <img src="../build/outlines/top_plate.svg">
+    <h3>PCB</h3>
+    <img src="../build/outlines/pcb.svg">
+    <h3>Bottom plate</h3>
+    <img src="../build/outlines/bottom_plate.svg">
+    <h3>Floor plate</h3>
+    <img src="../build/outlines/floor_plate.svg">
 
 </body>
